--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+globaleaks (2.60.42) wheezy; urgency=medium
+
+  * New upstream release.
+  * debian/:
+    + Fix lintian errors in package.
+    + Move directory top-level.
+  * debian/globaleaks.postinst:
+    + Install python dependencies in postinstall script
+    + Handle tor configuration (automatic, dull).
+
+ -- GlobaLeaks software signing key <info@globaleaks.org>  Mon, 22 Dec 2014 15:12:48 +0100
+
 globaleaks (2.60.32) unstable; urgency=low
 
   * GlobaLeaks 2.60.32 Release (Added Japanese and Ukrainian)
