--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+globaleaks (2.60.43) trusty; urgency=medium
+
+  * New upastream release
+
+ -- GlobaLeaks software signing key <info@globaleaks.org>  Tue, 23 Dec 2014 20:43:54 +0100
+
 globaleaks (2.60.42) trusty; urgency=medium
 
   * New upstream release.
