Apply changelog for precise release 2.60.44

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,16 @@
-globaleaks (2.60.43) wheezy; urgency=medium
+globaleaks (2.60.44) precise; urgency=medium
+
+  * New upstream release
+
+ -- GlobaLeaks software signing key <info@globaleaks.org>  Thu, 25 Dec 2014 00:55:05 +0100
+
+globaleaks (2.60.43) precise; urgency=medium
 
   * New upstream release.
 
  -- GlobaLeaks software signing key <info@globaleaks.org>  Tue, 23 Dec 2014 19:40:03 +0100
 
-globaleaks (2.60.42) wheezy; urgency=medium
+globaleaks (2.60.42) precise; urgency=medium
 
   * New upstream release.
   * debian/:
