Apply changelog for wheezy release 2.60.44

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+globaleaks (2.60.44) wheezy; urgency=medium
+
+  * New upstream release
+
+ -- GlobaLeaks software signing key <info@globaleaks.org>  Thu, 25 Dec 2014 00:55:05 +0100
+
 globaleaks (2.60.43) wheezy; urgency=medium
 
   * New upstream release.
