--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+globaleaks (2.60.44) trusty; urgency=medium
+
+  * New upstream release
+
+ -- GlobaLeaks software signing key <info@globaleaks.org>  Thu, 25 Dec 2014 01:27:35 +0100
+
 globaleaks (2.60.43) trusty; urgency=medium
 
   * New upastream release
