--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+globaleaks (2.60.44) jessie; urgency=medium
+
+  * New upstream release.
+
+ -- GlobaLeaks software signing key <info@globaleaks.org>  Thu, 25 Dec 2014 02:15:55 +0100
+
 globaleaks (2.60.43) jessie; urgency=medium
 
   * New upstream release.
