--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+globaleaks (2.60.45-0) precise; urgency=medium
+
+  * New upstream release
+
+ -- GlobaLeaks software signing key <info@globaleaks.org>  Tue, 30 Dec 2014 11:03:24 +0100
+
 globaleaks (2.60.44) precise; urgency=medium
 
   * New upstream release
