--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+globaleaks (2.60.46-0) trusty; urgency=medium
+
+  * New upstream release
+
+ -- GlobaLeaks software signing key <info@globaleaks.org>  Mon, 05 Jan 2015 23:47:59 +0100
+
 globaleaks (2.60.45-0) trusty; urgency=medium
 
   * New upstream release
