Apply changelog for precise release 2.60.46

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+globaleaks (2.60.46-0) precise; urgency=medium
+
+  * New upstream release 
+
+ -- Giovanni Pellerano <evilaliv3@remotehost>  Tue, 06 Jan 2015 01:05:36 +0100
+
 globaleaks (2.60.45-0) precise; urgency=medium
 
   * New upstream release
