Apply changelog for wheezy release 2.60.46

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,12 @@
+globaleaks (2.60.46-0) wheezy; urgency=medium
+
+  * New upstream release 
+
+ -- GlobaLeaks software signing key <info@globaleaks.org>  Tue, 06 Jan 2015 01:09:38 +0100
+
 globaleaks (2.60.45-0) wheezy; urgency=medium
 
-  * New updated release
+  * New upstream release
 
  -- GlobaLeaks software signing key <info@globaleaks.org>  Tue, 30 Dec 2014 11:14:41 +0100
 
