--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+globaleaks (2.60.47-0) wheezy; urgency=medium
+
+  * New upstream release 
+
+ -- GlobaLeaks software signing key <info@globaleaks.org>  Mon, 12 Jan 2015 03:49:58 +0100
+
 globaleaks (2.60.46-0) wheezy; urgency=medium
 
   * New upstream release 
