--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+globaleaks (2.60.48-0) trusty; urgency=medium
+
+  * New upstream release 
+
+ -- GlobaLeaks software signing key <info@globaleaks.org>  Tue, 13 Jan 2015 03:04:03 +0100
+
 globaleaks (2.60.47-0) trusty; urgency=medium
 
   * New upstream relese
