Apply changelog for precise release 2.60.48

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,14 +1,20 @@
+globaleaks (1.60.48-0) precise; urgency=medium
+
+  * New upstream release
+
+ -- GlobaLeaks software signing key <info@globaleaks.org>  Tue, 13 Jan 2015 13:26:31 +0100
+
 globaleaks (2.60.47-0) precise; urgency=medium
 
   * New upstream release
 
- -- GlobaLeaks software signing key <info@globaleaks.org> Mon, 12 Jan 2015 03:30:49 +0100
+ -- GlobaLeaks software signing key <info@globaleaks.org>  Mon, 12 Jan 2015 03:30:49 +0100
 
 globaleaks (2.60.46-0) precise; urgency=medium
 
   * New upstream release
 
- -- GlobaLeaks software signing key <info@globaleaks.org> Tue, 06 Jan 2015 01:05:36 +0100
+ -- GlobaLeaks software signing key <info@globaleaks.org>  Tue, 06 Jan 2015 01:05:36 +0100
 
 globaleaks (2.60.45-0) precise; urgency=medium
 
