Apply changelog for trusty release 2.60.49

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+globaleaks (2.60.49-0) trusty; urgency=medium
+
+  * New upstream release
+
+ -- GlobaLeaks software signing key <info@globaleaks.org>  Sun, 18 Jan 2015 16:01:13 +0100
+
 globaleaks (2.60.48-0) trusty; urgency=medium
 
   * New upstream release 
