--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+globaleaks (2.60.49) jessie; urgency=medium
+
+  * New upstream release
+
+ -- GlobaLeaks software signing key <info@globaleaks.org>  Sun, 18 Jan 2015 16:59:45 +0100
+
 globaleaks (2.60.48-0) jessie; urgency=medium
 
   * New upstream release
