--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+globaleaks (2.60.49-0) wheezy; urgency=medium
+
+  * New upstream release
+
+ -- GlobaLeaks software signing key <info@globaleaks.org>  Sun, 18 Jan 2015 17:05:57 +0100
+
 globaleaks (2.60.48-0) wheezy; urgency=medium
 
   * New upstream release
